; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_function.c_FunctionToObjectAddress.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_function.c_FunctionToObjectAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidOid = common dso_local global i32 0, align 4
@ProcedureRelationId = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32*, i32)* @FunctionToObjectAddress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @FunctionToObjectAddress(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @InvalidOid, align 4
  store i32 %9, i32* %7, align 4
  store i32* null, i32** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @AssertObjectTypeIsFunctional(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @LookupFuncWithArgs(i32 %12, i32* %13, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = call i32* @palloc0(i32 4)
  store i32* %16, i32** %8, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @ProcedureRelationId, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @ObjectAddressSet(i32 %18, i32 %19, i32 %20)
  %22 = load i32*, i32** %8, align 8
  ret i32* %22
}

declare dso_local i32 @AssertObjectTypeIsFunctional(i32) #1

declare dso_local i32 @LookupFuncWithArgs(i32, i32*, i32) #1

declare dso_local i32* @palloc0(i32) #1

declare dso_local i32 @ObjectAddressSet(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
